gitops/shoal/policy-template/block-external-dns.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: nodnsannotation
spec:
  crd:
    spec:
      names:
        kind: NoDNSAnnotation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission

        violation[{"msg": msg, "details": {}}] {
          input.review.object.metadata.annotations["external-dns.alpha.kubernetes.io/hostname"]
          msg := sprintf("Use of external-dns is not allowed: %v", [input.review.object.metadata.name])
        }
