gitops/shoal/policy-template/check-ingress-for-domain.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: ingresskonstfishtld
spec:
  crd:
    spec:
      names:
        kind: IngressKonstfishTLD
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidingress

        violation[{"msg": msg, "details": {"rejected_domain": domain}}] {
          input.review.kind.kind == "Ingress"
          domain := input.review.object.spec.rules[_].host
          endswith(domain, ".konst.fish")
          not endswith(domain, ".app.konst.fish")
          namespace := input.review.object.metadata.namespace
          msg := sprintf("Ingress with domain %v is not allowed", [domain])
        }
